Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,5 +25,5 @@ steps:
     serviceConnectionEndpoint: 'Snykconnection'
     testType: 'app'
     monitorWhen: 'always'
-    failOnIssues: true
+    failOnIssues: false
     projectName: 'Demo'
