--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,9 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
-- task: SnykSecurityScan@1
+
+- task: dependency-check-build-task@6
   inputs:
-    serviceConnectionEndpoint: 'Snykconnection'
-    testType: 'app'
-    monitorWhen: 'always'
-    failOnIssues: false
-    projectName: 'Demo'
+    projectName: 'Securityscan'
+    scanPath: '**/*.war'
+    format: 'HTML, CSV, JSON'
