--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
 steps:
 - task: SonarQubePrepare@5
   inputs:
-    SonarQube: 'Sonarqubeconnection'
+    SonarQube: 'Sonarconnection'
     scannerMode: 'Other'
     extraProperties: |
       # Additional properties that will be passed to the scanner,
