--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,10 +7,43 @@ trigger:
 - master
 
 pool:
-  vmImage: windows-latest
+  vmImage: ubuntu-latest
 
 steps:
 
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Write your commands here
+      
+        - bash: |
+            curl -v -X POST https://accenture.webhook.office.com/webhookb2/c6aea564-fe88-48b4-9fa6-a737f1425035@e0793d39-0939-496d-b129-198edd916feb/IncomingWebhook/15e5aab7761341388f908a5fe592fbc9/570d319c-d336-48a2-b32e-88ba623aa565 \
+              -H 'Content-Type: application/json; charset=utf-8' \
+              --data-binary @- << EOF
+              {
+                "type":"message",
+                "attachments":[
+                  {
+                    "contentType":"application/vnd.microsoft.card.adaptive",
+                    "contentUrl":null,
+                    "content":{
+                      "$schema":"http://adaptivecards.io/schemas/adaptive-card.json",
+                      "type":"AdaptiveCard",
+                      "version":"1.2",
+                      "body":[
+                        {
+                          "type": "TextBlock",
+                          "text": "Hello"
+                        }
+                      ]
+                    }
+                  }
+                ]
+              }
+            EOF      
+      
+      echo 'Hello world'
 - task: JavaToolInstaller@0
   inputs:
     versionSpec: '11'
@@ -19,7 +52,7 @@ steps:
 
 - task: sendemail@0
   inputs:
-    emailToAddress: 'harivigneshkn@gmail.com'
+    emailToAddress: 'swathi9796@gmail.com'
     emailCcAddress: 'swathi9796@gmail.com'
     emailSubject: 'Build  notification'
     emailBody: 'Build  notification'
@@ -29,7 +62,7 @@ steps:
   inputs:
     sendMailConditionConfig: 'Always'
     subject: '[{environmentStatus}] {passPercentage} tests passed in $(Release.EnvironmentName) stage for $(Build.BuildNumber)'
-    toAddress: 'swathi9796@gmail.com;harivigneshkn@gmail.com'
+    toAddress: 'swathi9796@gmail.com'
     defaultDomain: 'gmail.com'
     emailBodyFormat: 'InLine'
     emailBody: 'Build notify'
