Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ steps:
                 ]
               }
             EOF      
-      
+      displayName: swathi
       echo 'Hello world'
 - task: JavaToolInstaller@0
   inputs:
