--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,32 +17,7 @@ steps:
     script: |
       # Write your commands here
       
-        - bash: |
-            curl -v -X POST https://accenture.webhook.office.com/webhookb2/c6aea564-fe88-48b4-9fa6-a737f1425035@e0793d39-0939-496d-b129-198edd916feb/IncomingWebhook/15e5aab7761341388f908a5fe592fbc9/570d319c-d336-48a2-b32e-88ba623aa565 \
-              -H 'Content-Type: application/json; charset=utf-8' \
-              --data-binary @- << EOF
-              {
-                "type":"message",
-                "attachments":[
-                  {
-                    "contentType":"application/vnd.microsoft.card.adaptive",
-                    "contentUrl":null,
-                    "content":{
-                      "$schema":"http://adaptivecards.io/schemas/adaptive-card.json",
-                      "type":"AdaptiveCard",
-                      "version":"1.2",
-                      "body":[
-                        {
-                          "type": "TextBlock",
-                          "text": "Hello"
-                        }
-                      ]
-                    }
-                  }
-                ]
-              }
-            EOF      
-      displayName: swathi
+        - bash: |curl -H 'Content-Type: application/json' -d '{"text": "Hello World"}' https://accenture.webhook.office.com/webhookb2/c6aea564-fe88-48b4-9fa6-a737f1425035@e0793d39-0939-496d-b129-198edd916feb/IncomingWebhook/15e5aab7761341388f908a5fe592fbc9/570d319c-d336-48a2-b32e-88ba623aa565
       echo 'Hello world'
 - task: JavaToolInstaller@0
   inputs:
