--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ jobs:
   - task: Bash@3
     inputs:
       targetType: 'inline'
-      script: 'curl -H ''Content-Type: application/json'' -d ''{"text": "Hello World"}'' https://accenture.webhook.office.com/webhookb2/c6aea564-fe88-48b4-9fa6-a737f1425035@e0793d39-0939-496d-b129-198edd916feb/IncomingWebhook/15e5aab7761341388f908a5fe592fbc9/570d319c-d336-48a2-b32e-88ba623aa565'
+      script: 'curl -H ''Content-Type: application/json'' -d ''{"text": "Job failed"}'' https://accenture.webhook.office.com/webhookb2/c6aea564-fe88-48b4-9fa6-a737f1425035@e0793d39-0939-496d-b129-198edd916feb/IncomingWebhook/15e5aab7761341388f908a5fe592fbc9/570d319c-d336-48a2-b32e-88ba623aa565'
       
   
    
