--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,6 @@ jobs:
   - task: Bash@3
     inputs:
       targetType: 'inline'
-      script: 'curl -H ''Content-Type: application/json'' -d ''{"text": "Job failed"}''$(WEBHOOKURL)'
-      
+      script: |
+        curl -H 'Content-Type: application/json' -d '{"text": "Hello World"}' $(webhookurl)
   
-   
