--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,5 +43,5 @@ jobs:
     inputs:
       targetType: 'inline'
       script: |
-        curl -H 'Content-Type: application/json' -d ' {"variables": "variables.value"}' $(webhookurl)
+        curl -H 'Content-Type: application/json' -d ' {"text": "variables.value"}' $(webhookurl)
   
