--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,5 +44,5 @@ jobs:
     inputs:
       targetType: 'inline'
       script: |
-        curl -H 'Content-Type: application/json' -d ' {"text": ${{variable.one}} }' $(webhookurl)
+        curl -H 'Content-Type: application/json' -d ' {"text": ${{variables.one}} }' $(webhookurl)
   
