--- a/.github/workflows/truffelhog.yml
+++ b/.github/workflows/truffelhog.yml
@@ -12,6 +12,6 @@ jobs:
         with:
           fetch-depth: 0 # fetch all history so multiple commits can be scanned
       - name: TruffleHog Enterprise scan
-        uses: trufflesecurity/TruffleHog-Enterprise-Github-Action@master
+        uses: swathisenthilkumar/mvnwebapp1@master
         with:
-            args: --fail-verified ${{ github.event.repository.default_branch }} HEAD
+            args: --fail-verified ${{ secret }} HEAD --quiet
