Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,16 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+
+jobs:
+- job: test
+ 
+  pool:
+    name: Default
+   
+
+- job: Bar
+  
   variables:
     - name: Displaymessage
       value : Success
