Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,13 +11,13 @@ pool:
 
 
 jobs:
-- job: test
+
  
   pool:
     name: Default
    
 
-- job: Bar
+- job: Test
   
   variables:
     - name: Displaymessage
